--- a/package.json
+++ b/package.json
@@ -10,35 +10,42 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
+    "test": "ng test"
+  },
+  "prettier": {
+    "overrides": [
+      {
+        "files": "*.html",
+        "options": {
+          "parser": "angular"
+        }
+      }
+    ]
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.0.0",
-    "@angular/cdk": "19.0.0",
-    "@angular/common": "19.0.0",
-    "@angular/compiler": "19.0.0",
-    "@angular/core": "19.0.0",
-    "@angular/forms": "19.0.0",
-    "@angular/material": "19.0.0",
-    "@angular/platform-browser": "19.0.0",
-    "@angular/platform-browser-dynamic": "19.0.0",
-    "@angular/router": "19.0.0",
+    "@angular/cdk": "20.1.5",
+    "@angular/common": "20.1.6",
+    "@angular/compiler": "20.1.6",
+    "@angular/core": "20.1.6",
+    "@angular/forms": "20.1.6",
+    "@angular/material": "20.1.5",
+    "@angular/platform-browser": "20.1.6",
+    "@angular/router": "20.1.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.2",
-    "@angular/cli": "19.0.2",
-    "@angular/compiler-cli": "19.0.0",
+    "@angular/build": "^20.1.5",
+    "@angular/cli": "20.1.5",
+    "@angular/compiler-cli": "20.1.6",
     "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.4.0",
+    "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.8.2"
   }
 }
